<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titulo"
        style="@style/texto_tituloLibro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/titulo_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/autor"
        style="@style/texto_autorLibro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/autor_libro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autor" />

    <TextView
        android:id="@+id/tiempo_inicio"
        style="@style/texto_tiempoReproduccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/tiempoInicio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <TextView
        android:id="@+id/tiempo_final"
        style="@style/texto_tiempoReproduccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tiempoFinal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tiempo_inicio"
        app:layout_constraintTop_toBottomOf="@+id/seekBar" />

    <LinearLayout
        android:id="@+id/linearBotones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiempo_inicio">

        <ImageButton
            android:id="@+id/botonAtras"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#00FF0303"
            android:src="@drawable/anterior" />

        <ImageButton
            android:id="@+id/botonRegresar10"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#00FF0303"
            android:src="@drawable/atrasar" />

        <ImageButton
            android:id="@+id/botonReproducir"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/boton_redondo"
            android:src="@drawable/reproducir"
            />

        <ImageButton
            android:id="@+id/botonAdelantar10"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#00FF0303"
            android:src="@drawable/adelantar" />

        <ImageButton
            android:id="@+id/botonSiguiente"
            android:layout_width="40dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="#00FF0303"
            android:src="@drawable/siguiente" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>